# BabaTheWeby

./: .gitignore  .gitmodules  CNAME  Cargo.toml  Dioxus.toml  build.sh  dev.sh  export_singlepage.sh  index.html  leptos-test-446692374c960741.js  leptos-test-446692374c960741_bg.wasm
.github/workflows/: buld-n-deploy.yml
docs/: index.html
docs/.perseus/: bundle.js  bundle.wasm
docs/.perseus/page/xx-XX/: .json
docs/.perseus/static/assets/: baba.css
docs/assets/dioxus/: baba-pet.js  baba-pet_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
public/assets/: baba.css
src/: app.rs  home.rs  lib.rs  main.rs
static/assets/: baba.css
