[package]
name = "baba-pet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.3", features = [] }
dioxus-fullstack = { version = "0.4.3", features = ["router"] }
dioxus-router = "0.4.3"
dioxus-web = { version = "0.4.3", features = ["hydrate"], optional = true }
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"], optional = true }

[features]
default = []
ssr = ["tokio", "dioxus-fullstack/ssr"]
web = ["dioxus-web"]
