[package]
name = "baba-pet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "=0.4.2", features = [ "hydrate" ] }
sycamore = "^0.8.1"
web-sys = { version = "0.3.69", features = ["PointerEvent", "TouchEvent", "TouchList", "Touch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]
gloo = "0.11.0"

[profile.release]
lto = true
opt-level = 'z'
